[gd_scene load_steps=6 format=2]

[ext_resource path="res://IntroNivel.gd" type="Script" id=1]
[ext_resource path="res://img/Nivel1.png" type="Texture" id=2]
[ext_resource path="res://img/Nivel2.png" type="Texture" id=3]
[ext_resource path="res://img/Nivel3.png" type="Texture" id=4]
[ext_resource path="res://img/ganaste.png" type="Texture" id=5]

[node name="IntroNivel" type="Control"]
script = ExtResource( 1 )

[node name="Nivel1" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 344.261
margin_top = 266.56
margin_right = 1453.26
margin_bottom = 468.56
rect_scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="Nivel2" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 344.261
margin_top = 266.56
margin_right = 1453.26
margin_bottom = 468.56
rect_scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )

[node name="Nivel3" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 344.261
margin_top = 266.56
margin_right = 1462.26
margin_bottom = 476.56
rect_scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 4 )

[node name="Ganaste" type="TextureRect" parent="."]
visible = false
margin_left = 70.4911
margin_top = 196.368
margin_right = 970.491
margin_bottom = 393.368
texture = ExtResource( 5 )
